@@ -247,3 +247,9 @@ match = \.(t|pm)$
 dir = bin
 
 [Prereqs]
+
+[RemovePhasedPrereqs]
+remove_runtime = Sub::Identify
+
+[Prereqs::Soften]
+module = Sub::Util
