@@ -1,6 +1,8 @@
 This file contains changes in OPTIONAL dependencies for standard CPAN phases (configure/build/runtime/test)
 
 0.002901
+ [Added / runtime recommends]
+ - Sub::Util
 
 0.002900 2016-06-26T19:35:43Z
 
