@@ -3,6 +3,11 @@ Release history for Devel-Isa-Explainer
 {{$NEXT}}
  - CLONE/CLONE_SKIP now exempt from shadowing logic. ( Closes #5 )
 
+ [Dependencies::Stats]
+ - Dependencies changed since 0.002900, see misc/*.deps* for details
+ - develop: +2
+ - runtime: (recommends: +1)
+
 0.002900 2016-06-26T19:35:43Z 7405ed0
  - UNIVERSAL now automatically shown in inheritance. ( Closes #11 )
  - discovering subs using "can" now removed, as "can" was prematurely exposing subs in crossed inheritances, which
